src/scss/components/visual.scss
.visual {
  @include resp-img((732/374) * 100%);
  width: 37.4rem;
  margin: 1.4rem 0;
  position: relative;
  left: 7.5rem;
  bottom: -6rem;
  @include laptop {
    width: 32rem;
  }
  @include tablet {
    padding: 3.2rem 0;
    padding: 0;
    left: 0;
  }
  @include phablet {
    top: 10.5rem;
    margin: 0 auto;
    &::before {
      padding-top: 0;
    }
    img {
      height: auto;
    }
  }
  @include mobile-lg {
    width: 25rem;
  }
  @include mobile-sm {
    width: 20rem;
  }
  &__image {
    object-fit: contain;
    @include phablet {
      position: absolute;
      clip: rect(0px, auto, 30rem, 0px);
    }
    @include mobile-lg {
      clip: rect(0px, auto, 30rem, 0px);
    }
    @include mobile {
      clip: rect(0px, auto, 25rem, 0px);
    }
    @include mobile-sm {
      clip: rect(0px, auto, 17rem, 0px);
    }
  }
}

